spelling, fix z-index

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -7,6 +7,7 @@ footer {
   display: block;
   font-size: $font-size-14;
   background-color: $beige;
+  z-index: 30;
 }
 
 .footer__content {
